2A/05_Projet_GL/src/test/deca/context/valid/complet/49_casting_int_float.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

{
    int i = 1;
    float f =(float)(i);
}